--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,16 +1,13 @@
 ﻿name: Deploy to GitHub Pages
-
 on:
   push:
     branches: [ main ]
-  pull_request:
   workflow_dispatch:
 
 permissions:
   contents: read
   pages: write
   id-token: write
-  pull-requests: write
 
 concurrency:
   group: "pages"
@@ -18,8 +15,6 @@ concurrency:
 
 jobs:
   build:
-    name: Build static site
-    needs: review
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -33,16 +28,13 @@ jobs:
       - name: Build
         run: npm run build
         env:
+          # Let vite.config.ts compute correct base href
           GITHUB_REPOSITORY: ${{ github.repository }}
-      - name: Configure Pages
-        uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: dist
-
   deploy:
-    name: Deploy to Pages
     needs: build
     runs-on: ubuntu-latest
     environment:
